--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.2",
     "nodemon": "^3.0.1"
+  },
+  "engines": {
+    "node": "14.17.0"
   }
 }
